# meeting-transcriber

./: LICENSE  Makefile  README.md
asr_service/: .env.example  .gitignore  CLI_DEBUG_GUIDE.md  LOGGING.md  Makefile  PROVISIONAL_UTTERANCES_FEATURE.md  SUCCESS_SUMMARY.md  TESTING_GUIDE.md  TEST_RESULTS.md  VAD_DTYPE_FIX.md  architecture_overview.md  asr_demo.cast  audit_report.txt  code_audit.sh  feature_requests.md  llm_intelligence_introduction_plan.md  pyproject.toml  service_implementation_tasks.md
asr_service/scripts/: .env.example  README.md  SCRIPT_COMPARISON.md  benchmark_qwen.py  benchmark_qwen_safe.py  cold_path_pipeline.py  cold_path_pipeline_v2.py  config.py  coreaudio_tap_audio.swift  debug_screencapture.py  debug_session.py  debug_transcribe.py  interactive_test.py  interactive_test_v2.py  live_test.py  live_test_v2.py  live_test_v3.1.py  live_test_v3.2.py  screencapture_audio  screencapture_audio.swift  setup_audio_routing.sh  test_audio_capture.py  test_blackhole_with_tone.py  test_coreaudio_tap.py  test_frontend_language_persistence.py  test_language_options.py  test_live_websocket.py  test_mlx_whisper.py  test_provisional_in_insights.py  test_screencapture.py  test_two_sources.py  test_two_sources_live.py  transcribe_file.py
asr_service/scripts/debug/: recover_meeting.py  verify_vad_fix.py
asr_service/src/asr_service/: __init__.py  main.py
asr_service/src/asr_service/api/: deps.py
asr_service/src/asr_service/core/: config.py  exceptions.py  logging.py  singleton.py
asr_service/src/cli_frontend/: __main__.py  app.py  app.tcss  config.py  logging.py  models.py  settings_persistence.py
asr_service/tests/: README.md  TEST_SUMMARY.md  conftest.py
asr_service/tests/backend/: test_api_endpoints.py  test_live_transcriber.py  test_services.py  test_vad_streaming.py
asr_service/tests/frontend/: __init__.py  test_api_client.py  test_models.py  test_settings_models.py  test_settings_persistence.py  test_settings_screen.py  test_widgets.py
asr_service/tests/integration/: test_e2e_workflow.py  test_health_endpoint.py  test_live_transcribe_ws.py  test_real_transcription.py  test_transcribe_final.py
asr_service/tests/unit/: test_audio_processor.py  test_config.py  test_file_ops.py  test_model_loader.py
llm_intelligence/: .env.example  .gitignore  Makefile  README.md  code_audit.sh  pyproject.toml
llm_intelligence/.llm_cache/: cache.db
llm_intelligence/scripts/: list_models.py
llm_intelligence/skills/: code.md  emotion-translate.md  knowledge.md  panic-mode.md
llm_intelligence/src/.llm_cache/: cache.db
llm_intelligence/src/llm_intelligence/: cache.py  main.py  model_catalog.py  schemas.py  service.py  skills_loader.py
llm_intelligence/tests/: conftest.py
llm_intelligence/tests/unit/: test_model_catalog.py  test_service.py  test_skills_loader.py
(+39 files in other folders)
