[project]
name = "asr-service"
version = "0.1.0"
description = "ASR meeting transcriber microservice using Whisper"
readme = "README.md"
authors = [
    { name = "Krzysztof Jurkiewicz", email = "huntekah@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "librosa>=0.10.2",
    "numpy>=2.1.0",
    "websockets>=14.1",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.1",
    "sortedcontainers>=2.4.0",
    "pyannote-audio>=3.1.0",
    "faster-whisper>=1.0.0",
    "whisperx>=3.1.1",
    "sounddevice>=0.4.6",
    "ffmpeg-python>=0.2.0",
    "mlx-whisper>=0.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "bandit>=1.7.0",
    "mypy>=1.13.0",
    "radon>=6.0.0",
    "vulture>=2.0.0",
    "pylint>=3.0.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
